[package]
name = "doom_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary-stream = "8.1.0"
binread = "2.2.0"
binrw = "0.11.2"
clap = { version = "4.3.19", features = ["derive"] }
modular-bitfield = "0.11.2"
ordered-float = "3.7.0"
packed_struct = { version = "0.10.1", features = ["use_serde"] }
sdl2 = { version = "0.35.2", features = ["gfx"] }
serde = { version = "1.0.177", features = ["derive"] }
